-- NaviManager::bind has a new optional parameter, a string vector containing keys to validate via NaviData::ensure.
-- NaviManager::getDerivedUV has been added.
-- NaviManager::injectNaviMaterialMouseWheel has been renamed injectNaviMouseWheel because it may now be used on both regular Navis and NaviMaterials.
-- NaviManager::setNaviBackgroundColor has a new overload (takes a hex color string).
- In NaviData:
-- Completely rewritten with an std::map as a base with heavy use of a generic type, 'NaviDataValue'.
-- Primary mode of interface is via the subscript operator (naviData["myKey"]) for assignment/value retrieval.
-- NaviData::ensure may be used for validation purposes.
- In NaviMouse:
-- NaviMouse::show() has been added
-- NaviMouse::hide() has been added
- In NaviUtilities:
-- Is now wrapped in a new nested namespace, NaviUtilities
-- New functions: split, splitToMap, join, joinFromMap, isPrefixed, isNumeric, numberToString, toNumber
-- New utility class, InlineVector<T> and specialization, Strings
-- NaviUtilities::replaceAll has lost a parameter, 'avoidCyclic' (no longer required due to new implementation)
- In Navi.js:
-- Completely rewritten from the ground up. Mootools v1.11 is embedded in the first section, scroll to the bottom section for the actual meat of Navi.js.
-- New combobox implementation has been included as a workaround for the current problems with native comboboxes.
-- Element.setHTMLBuffered has been included as a workaround for the flicker problem with frequently-updated elements.

Core Changes since v1.3:
- Navi::update() is now mindful of machine-specific bit depths/rowspans. This contribution/bugfix was made possible by 'madmark'.